--- a/sass/main.scss
+++ b/sass/main.scss
@@ -713,18 +713,19 @@ input[type=email] {
 	// GRAPHICS DESIGN PAGE STARTS HERE
 
 .gd-main-container{
-	display: flex;
-	flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .gd-img-wrap{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 50%;
+	padding: 20px;
+    width: 40%;
 
  img {
-	margin: 40px;
+	width: 100%;
+
 	-webkit-box-shadow: 0px 2px 35px -4px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 2px 35px -4px rgba(0,0,0,0.75);
 	box-shadow: 0px 2px 35px -4px rgba(0,0,0,0.75);
