--- a/views/graphicsdesign.hbs
+++ b/views/graphicsdesign.hbs
@@ -2,12 +2,16 @@
         <h1>Graphics Design</h1>
     </div>
 
+    
+
 
 <section class="gd-main-container">
 
         <div class="gd-img-wrap">
         <img src="images/cruise.jpg" alt="poster">
     </div>
+
+
 
         <div class="gd-img-wrap">
         <img src="images/esports.jpg" alt="poster">
@@ -24,7 +28,12 @@
         <div class="gd-img-wrap">
         <img src="images/streetball.jpg" alt="poster">
 
-        </div>
+        </div>    
+        
+        
+        <div class="gd-img-wrap">
+        <img src="images/dj_skate_night.jpg" alt="poster">
+    </div>
 
     <div class="gd-img-wrap">
         <img src="images/wallpaper.png" alt="poster">
@@ -33,11 +42,6 @@
     <div class="gd-img-wrap">
         <img src="images/portal.jpg" alt="poster">
     </div>
-
-    <div class="gd-img-wrap">
-        <img src="images/eclipse.jpg" alt="poster">
-    </div>
-
 
     
     
