--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,7 +8,16 @@
 </div>
 
 <div>
-    <p>My name is Noah Fainer. I believe that doing more is living more. It’s hard to say: am I a snowboarder, skateboarder, teacher, photographer or motion graphics artist? The answer to me is simply all the above. However, this is how I see myself. My online identity can be said to be different than my offline because my online identity exists as a result of the actions I take, while my offline identity is constantly being molded by my experiences and surroundings. Furthermore, this is because I curate my online profiles to express who I believe I am and what is most important to me. I have a goal in life and a career to pursue; I want to tell the world that this is who I am trying to be (just not as explicitly).</p>
+    <p>Hey there! My name is Noah Fainer. I am a photographer, videographer and motion designer who specializes in marketing and advertising. I have a passion to create visuals for brands to help them tell their stories. 
+    </p>
+<br>
+    <p>
+        I got my post-secondary education at Western University in Media Information and Technoculture as well as Fanshawe College in Interactive Media Design. I’ve been working as a creator for the past 4 years working as a freelancer, working for Western HAS Marketing, Western TV and Productions in the 6ix.
+    </p>
+<br>
+    <p>
+        I was the Director of Videography for the CAISA fashion show, the largest student run charity fashion show in Canada with our videos reaching collectively over 30,000 views helping raise over $350,000 for the Children Health Foundation and having an event attendance of over 1500 people each year. This work was entirely volunteer based.
+    </p>
 </div>
 </section>
 
@@ -35,5 +44,6 @@
     <div class="skills-logo">
         <img src="images/cinema4d.png" alt="c4d">
     </div>
+
 
 </section>
