--- a/views/mograph.hbs
+++ b/views/mograph.hbs
@@ -5,9 +5,10 @@
 
 <section class="video-body">
 
+<div class="video-wrapper">
 <section class="video-section">
     <div class="video-player">
-        <iframe src="https://player.vimeo.com/video/378070956" width="1280" height="665" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/391134554" width="1280" height="655" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
  </section>
 
@@ -18,7 +19,9 @@
      <p>This video is an edited stylistic compilation of all of my work related to motion graphics. To make this I used Adobe Premiere Pro, After Effects, Cinema 4D and Octane Render engine.</p>
 
  </section>
+</div>
 
+<div class="video-wrapper">
  <section class="video-section">
     <div class="video-player">
         <iframe src="https://player.vimeo.com/video/378877500" width="1280" height="655" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
@@ -29,8 +32,9 @@
 
      <h1>Vivid Agency Promo</h1>
 
-     <p>Vivid Agency is a made-up company which I had created a promo video for. I used Adobe After Effects to create this video along with a variety of plug-ins such as Newton and Plexus. I made this video with the goal of keeping a consistent look and feel through out the video to reinforce the idea that this is a promo for a branding agency. I had also added sound design and my own voice narration to up the production value of the ad.</p>
+     <p>Vivid Agency is a made-up company which I had created a promo video for. I used Adobe After Effects to create this video along with a variety of plug-ins such as Newton and Plexus. I made this video with the goal of keeping a consistent look and feel through out the video to reinforce the idea that this is a promo for a branding agency. I had also added sound design and my own voice narration to up the production value of the ad and enhance the brand's story.</p>
 
  </section>
 
 </section>
+</div>
