--- a/sass/main.scss
+++ b/sass/main.scss
@@ -497,10 +497,8 @@ input[type=email] {
 }
 .video-player {
 	position: relative;
-	overflow: hidden;
 	display: flex;
 	width: 100%;
-	overflow: hidden;
 	justify-content: center;
 	align-items: center;
 	height: 54vw;
@@ -508,6 +506,11 @@ input[type=email] {
 
 .video-body {
     padding: 15px;
+}
+
+.video-wrapper{
+
+	padding: 0 5vw 0 5vw;
 }
 
 @media only screen and (max-width: 768px) {
