--- a/views/concert.hbs
+++ b/views/concert.hbs
@@ -9,7 +9,7 @@
     <section class="concert-page-container">
         <div class="dreams-img" value="1">
              <img src="images/lights.png" alt="lights photo">
-        <p>Bud Light Dreams Festival is an electronic music festival hosted at Echo Beach in Toronto, Canada. This festival brings in an attendace of around 25,000 people over the course of two days each year. I was given the opportunity to work for the festival's production team as a photographer. I got to work with brands such as Monster energy and Coca-Cola taking product shots during the festival. I was also given the task to take photos of various artists through out the festival over both days. Some of the artists I took photo of at Dreams include Oliver Heldens, Ghastly, Duke Dumont, Lights, Zedd and Ryan Shepherd. </p>
+        <p>Bud Light Dreams Festival is an electronic music festival hosted at Echo Beach in Toronto, Canada. This festival brings in an attendance of around 25,000 people over the course of two days each year. I was given the opportunity to work for the festival's production team as a photographer. I got to work with brands such as Monster energy and Coca-Cola taking product shots during the festival. I was also given the task to take photos of various artists throughout the festival over both days. Some of the artists I took photo of at Dreams include Oliver Heldens, Ghastly, Duke Dumont, Lights, Zedd and Ryan Shepherd. </p>
         </div> 
        
         <img src="images/ghastly.png" alt="lights photo" class="dreams-img" value="2">
@@ -39,7 +39,7 @@
     <section class="concert-page-container">
         <div class="purple-fest-img" value="4">
         <img src="images/juicewrld.png" alt="lights photo">
-       <p class="purple-fest-text">Purple Fest is a music festival hosted by Western University every year during the university's homecoming event. The attendance for 2019 was aproximately 10,000 people and bringing in artists such as A Boogie Wit Da Hoodie, Murda Beatz, Lil Uzi Vert, Juice WRLD, Loud Luxury, Tyga and many more. I was given a media pass to take photos and video for the event. On this page you will find some of my photos which I had taken during Purple Fest 2018 and 2019.</p>
+       <p class="purple-fest-text">Purple Fest is a music festival hosted by Western University every year during the university's homecoming event. The attendance for 2019 was approximately 5,000 people and bringing in artists such as A Boogie Wit Da Hoodie, Murda Beatz, Lil Uzi Vert, Juice WRLD, Loud Luxury, Tyga and many more. I was given a media pass to take photos and video for the event. On this page you will find some of my photos which I had taken during Purple Fest 2018 and 2019.</p>
         </div>
 
         <img src="images/loudluxury.png" alt="lights photo" value="3" class="purple-fest-img">
