fixed some spelling and grammar mistakes

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -12,7 +12,7 @@
     </p>
 <br>
     <p>
-        I got my post-secondary education at Western University in Media Information and Technoculture as well as Fanshawe College in Interactive Media Design. I’ve been working as a creator for the past 4 years working as a freelancer, working for Western HAS Marketing, Western TV and Productions in the 6ix.
+        I got my post-secondary education at Western University in Media Information and Technoculture as well as Fanshawe College in Interactive Media Design. I’ve been a content creator for the past 4 years and have been working working as a freelancer, working for Western U HAS Marketing, Western TV, Western Gazette and Productions in the 6ix.
     </p>
 <br>
     <p>
