--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -65,7 +65,7 @@
      </div>
 
      <div id="copyright">
-        <p>Noah Fainer All Right Reserved 2020 ®</p>
+        <p>Noah Fainer 2020 All Rights Reserved ® </p>
      </div>
  </footer>    
     <script src="js/main.js"></script>
