--- a/views/photography.hbs
+++ b/views/photography.hbs
@@ -5,7 +5,7 @@
     <section id="photography-section">
 
 
-<a href="/portraits" class="portfolio-pannel">
+<a href="#" class="portfolio-pannel">
     <div>
         <p >Portraits</p>
         <img src="images/photography-portraits.png" alt="">
@@ -19,7 +19,7 @@
     </div>
 </a>
 
-<a href="/travel" class="portfolio-pannel">
+<a href="#" class="portfolio-pannel">
     <div>
         <p>Travel</p>
         <img src="images/photography-travel.png" alt="">
