found another typo

--- a/views/videography.hbs
+++ b/views/videography.hbs
@@ -15,7 +15,7 @@
 
  <section class="video-description">
 
-     <h1>Western University Soph Sneak Peak Rallally Promo</h1>
+     <h1>Western University's Soph Sneak Peak Rally Promo</h1>
 
      <p>Every year at the beginning of September Western University hosts their annual Frosh Week to welcome thousands of new students to Western. I worked on this video for Western U Housing and Ancillary Services to promote and recruit residence Sophs. A Soph at Western is an upper-year student who dedicates their time to welcoming and assisting new student with anything they might need.
 </p>
