--- a/sass/main.scss
+++ b/sass/main.scss
@@ -740,4 +740,90 @@ input[type=email] {
 }
 }
 
+//end of graphics design page
+
+// portrait page starts HERE
+
+.portraits-page-container{
+	display: grid;
+	grid-template-columns: 2fr 2fr 2fr 2fr 2fr;
+	padding: 10vw;
+}
+
+.portrait-img[value="1"]{
+	grid-row: 1 / span 1;
+	grid-column: 1 / span 5;
+	width: 100%;
+	padding-bottom: 50px;
+}
+
+
+.portrait-img[value="2"]{
+	grid-row: 2 / span 1;
+	grid-column: 1 / span 2;
+	z-index: 1;
+	width: 100%;
+	padding: 35px;
+}
+
+.portrait-img[value="3"]{
+	grid-row: 2 / span 1;
+	grid-column: 4 / span 1;
+	padding: 175px 0 0 0;
+	width: 160%;
+}
+
+.portrait-img[value="4"]{
+	grid-row: 3 / span 1;
+	grid-column: 1 / span 2;
+	padding: 35px;
+	width: 100%;
+}
+
+.portrait-img[value="5"]{
+	grid-row: 3 / span 1;
+	grid-column: 4 / span 2;
+	z-index: 1;
+	width: 100%;
+	padding-top: 115px;
+}
+
+.portrait-img[value="6"]{
+	grid-row: 4 / span 1;
+	grid-column: 3 / span 1;
+	width: 100%;
+}
+
+.portrait-img[value="7"]{
+	grid-row: 1 / span 1;
+	grid-column: 2 / span 3;
+	width: 100%;
+	padding-bottom: 50px;
+}
+
+.portrait-img[value="8"]{
+	grid-row: 2 / span 1;
+	grid-column: 2 / span 1;
+	width: 100%;
+}
+
+.portrait-img[value="9"]{
+	grid-row: 2 / span 1;
+	grid-column: 4 / span 1;
+	width: 100%;
+	padding-bottom: 50px;
+}
+
+.portrait-img[value="10"]{
+	grid-row: 4 / span 1;
+	grid-column: 3 / span 1;
+	width: 100%;
+	padding-bottom: 50px;
+}
+
+.portrait-img[value="11"]{
+	grid-row: 5 / span 1;
+	grid-column: 2 / span 3;
+	width: 100%;
+}
 
