--- a/views/photography.hbs
+++ b/views/photography.hbs
@@ -5,7 +5,7 @@
     <section id="photography-section">
 
 
-<a href="#" class="portfolio-pannel">
+<a href="/portraits" class="portfolio-pannel">
     <div>
         <p >Portraits</p>
         <img src="images/photography-portraits.png" alt="">
