--- a/views/portraits.hbs
+++ b/views/portraits.hbs
@@ -3,7 +3,7 @@
     </div>
 
     <div class="center-me">
-        <img src="images/luminati_logo.png" alt="">
+        <img src="images/luminati_logo.png" alt="luminati logo" id="luminati-logo">
     </div>
     
     <section class="portraits-page-container">   
