--- a/views/videography.hbs
+++ b/views/videography.hbs
@@ -2,8 +2,42 @@
         <h1>Videography</h1>
     </div>
 
+<div class="video-wrapper">
 
-<section class="video-body">
+<section class="video-section">
+    <div class="video-player">
+        <iframe src="https://player.vimeo.com/video/408953304" width="1280" height="655" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+
+    </div>
+ </section>
+</div>
+
+<div class="video-wrapper">
+
+<section class="video-section">
+    <div class="video-player">
+        <iframe src="https://player.vimeo.com/video/408951996" width="1280" height="655" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+
+
+    </div>
+ </section>
+</div>
+
+<div class="video-wrapper">
+
+<section class="video-section">
+    <div class="video-player">
+        <iframe src="https://player.vimeo.com/video/408954040" width="1280" height="655" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+
+
+
+    </div>
+ </section>
+</div>
+
 
 <div class="video-wrapper">
 <section class="video-section">
