--- a/views/videography.hbs
+++ b/views/videography.hbs
@@ -11,6 +11,12 @@
 
     </div>
  </section>
+
+  <section class="video-description">
+
+     <h1>Luminati Michael Crispel Interview</h1>
+
+ </section>
 </div>
 
 <div class="video-wrapper">
@@ -22,6 +28,11 @@
 
 
     </div>
+ </section>
+   <section class="video-description">
+
+     <h1>Luminati Presents: Tina Karchava</h1>
+
  </section>
 </div>
 
@@ -35,6 +46,12 @@
 
 
     </div>
+ </section>
+
+   <section class="video-description">
+
+     <h1>Luminati Presents: Debbie Eng</h1>
+
  </section>
 </div>
 
