--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -9,12 +9,13 @@
 </div>
 
 <div class="center-me">
-    <p>Send me a message and I will get back to you within 48 hours</p>
+    <h2>noahfainer@hotmail.com</h2>
+    <h2>647-200-0488</h2>
 </div>
 
 
 
-<section class="contact-form-section">
+{{!-- <section class="contact-form-section">
     <form action="data/contact.php" method="post" id="form-section">
         <div class="form">
                 <input type="text" name="company" placeholder="Name">
@@ -29,6 +30,6 @@
             <input type="submit" value="Submit" class="submit-button">
         </div>
     </form>
-</section>
+</section> --}}
 
 <script src="js/conact.js"></script>
