--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -8,10 +8,18 @@
     <object data="images/logo.svg" type="image/svg+xml" id="logo-contact"></object>
 </div>
 
-<div class="center-me">
+<section class="contact-form-section">
+
+   <div class="center-me">
     <h2>noahfainer@hotmail.com</h2>
+    
+</div> 
+<div class="center-me">
     <h2>647-200-0488</h2>
 </div>
+</section>
+
+
 
 
 
