--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -11,11 +11,11 @@
 <section class="contact-form-section">
 
    <div class="center-me">
-    <h2>noahfainer@hotmail.com</h2>
+    <p>noahfainer@hotmail.com</p>
     
 </div> 
 <div class="center-me">
-    <h2>647-200-0488</h2>
+    <p>647-200-0488</p>
 </div>
 </section>
 
