fixed video issues

--- a/views/videography.hbs
+++ b/views/videography.hbs
@@ -17,6 +17,9 @@
 
      <h1>Luminati Michael Crispel Interview</h1>
 
+     <p>The founder of Luminati Thermal Film and Earth Salon tells us a bit about the brand and product. This video is a promo video designed to promote Luminati Thermal Film, increase Luminati's social media engagement and raise brand awareness.
+</p>
+
  </section>
 </div>
 
@@ -34,11 +37,13 @@
 
      <h1>Luminati Presents: Tina Karchava</h1>
 
+      <p>Tina Karchava shows off her unique hair colouring technique. This video is a promo video designed to promote Luminati Thermal Film, increase Luminati's social media engagement and raise brand awareness.
+</p>
+
  </section>
 </div>
 
 <div class="video-wrapper">
-
 <section class="video-section">
     <div class="video-player">
         <iframe src="https://player.vimeo.com/video/408954040" width="1280" height="655" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
@@ -52,9 +57,12 @@
    <section class="video-description">
 
      <h1>Luminati Presents: Debbie Eng</h1>
+     <p>Debbie Eng shows off her impressive hair colouring technique. This video is a promo video designed to promote Luminati Thermal Film, increase Luminati's social media engagement and raise brand awareness.
+</p>
 
  </section>
 </div>
+
 
 
 <div class="video-wrapper">
